# an_arithmetic_puzzle

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: an_arithmetic_puzzle.dune-package  an_arithmetic_puzzle.install
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: main.cma  main.ml
_build/default/lib/.main.objs/byte/: main.cmi  main.cmo  main.cmt
_build/default/lib/.merlin-conf/: lib-main
_build/default/test/.merlin-conf/: exe-test_an_arithmetic_puzzle
_build/default/test/.test_an_arithmetic_puzzle.eobjs/byte/: dune__exe__Test_an_arithmetic_puzzle.cmi  dune__exe__Test_an_arithmetic_puzzle.cmti
_build/default/test/.test_an_arithmetic_puzzle.eobjs/native/: dune__exe__Test_an_arithmetic_puzzle.cmx
_build/install/default/lib/an_arithmetic_puzzle/: META  dune-package  opam
lib/: dune  main.ml
test/: dune
